# sh-renderer

./: .gitignore  CMakeLists.txt  GEMINI.md  LICENSE  README.md
.cache/clangd/index/: implementations.cpp.654CED65F87AC67E.idx  renderer_main.cpp.34343C9598FF2BA9.idx
data/Sponza/: scene.gltf
data/occluder_shell/: scene.gltf
glsl/: additive.frag  bilateral_blur.frag  blur.frag  depth.frag  depth.vert  depth_cutout.frag  depth_cutout.vert  depth_cutout_w_normal.frag  depth_cutout_w_normal.vert  depth_opaque.vert  depth_opaque_w_normal.frag  depth_opaque_w_normal.vert  depth_vis.frag  depth_w_normal.frag  depth_w_normal.vert  fullscreen.vert  light_cull.comp  q3_composite.glsl  radiance.frag  radiance.vert  shadow.frag  shadow.vert  shadow_vis.frag  sky_analytic.frag  sky_analytic.vert  ssao.frag  ssao_vis.frag  tonemap.frag  tonemap.vert  unlit.vert
src/: camera.cpp  camera.h  camera_test.cpp  cascade.cpp  cascade.h  cascade_test.cpp  colorspace.h  compute_light_tile.cpp  compute_light_tile.h  compute_light_tile_test.cpp  culling.cpp  culling.h  culling_test.cpp  draw_additive.cpp  draw_additive.h  draw_depth.cpp  draw_depth.h  draw_radiance.cpp  draw_radiance.h  draw_shadow_map.cpp  draw_shadow_map.h  draw_sky.cpp  draw_sky.h  draw_ssao.cpp  draw_ssao.h  draw_tonemap.cpp  draw_tonemap.h  gl_common.cpp  gl_common.h  glad.c  glad.h  implementations.cpp  input.cpp  input.h  input_test.cpp  interaction.cpp  interaction.h  interaction_test.cpp  loader.cpp  loader.h  (+20 more)
src/shaders/: depth.frag  unlit.frag
